<resources>
    <string name="app_name">SelfLearning</string>
    <string name="demo_material_design">Material design demo</string>
    <string name="demo_loader">Loader Demo</string>
    <string name="demo_toolbar">Toolbar demo</string>
    <string name="demo_expandable_list">Expandable list demo</string>
    <string name="demo_custom_notification">Custom Notification demo</string>
    <string name="demo_rotate_image">Rotate Image demo</string>
    <string name="demo_file">File demo</string>
    <string name="demo_tdd_mvp_mvvp">TDD with MVVM and MVP</string>
    <string name="demo_shared_pref_screen">Shared preference screen</string>
    <string name="demo_database_upgrade">Database upgrade demo</string>
    <string name="demo_custom_rotate_view">Rotate view demo</string>
    <string name="demo_rx_android">RxAndroid demo</string>
    <string name="btn_attach_observer">Attach observer</string>
    <string name="btn_detach_observer">Detach observer</string>
    <string name="btn_using_operators">Using operators</string>
    <string name="btn_asynchronous">Asynchronous job</string>
    <string name="et_enter_decimal_digit">Enter decimal digit</string>
    <string name="btn_convert">Convert</string>
    <string name="demo_observer_pattern">Observer pattern demo</string>
    <string name="demo_swipe_layout">Swipe layout demo</string>
    <string name="textview_welcome">Welcome</string>
    <string name="demo_localization">Localization demo</string>
    <string name="demo_pull_to_refresh">Pull to refresh demo</string>
    <string name="textview_pull_to_refresh">Pull to refresh</string>
    <string name="demo_advance_fab">Advance FAB</string>
    <string name="demo_custom_fab">Custom FAB</string>
    <string name="demo_2d_fab">2-D FAB demo</string>
    <string name="demo_scale_animation">Scale animation demo</string>
    <string name="demo_boayz_swipe_lib">Boayz Swipe library demo</string>
    <string name="demo_swift_perfect">Swift perfect demo</string>
    <string name="textview_request">Request:</string>
    <string name="textview_response">Response:</string>
    <string name="textview_url">URL:</string>
    <string name="textview_make_get_request">Make get request</string>
    <string name="textview_make_post_request">Make post request</string>
    <string name="textview_upload_file">Upload File</string>
    <string name="textview_download_file">Download File</string>
    <array name="string_list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
    </array>
    <item name="loader_ids" type="id"/>
    <string name="youtube_api_key">AIzaSyBos9YkTSxHISf9DlCr9Px6R268YO9B9tU</string>
    <string name="demo_you_tube">YouTube demo</string>
    <string name="validate">Validate</string>
</resources>
