<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDecimalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_enter_decimal_digit"/>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_convert"/>

    <TextView
        android:id="@+id/tvData"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>